--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <label id="myLabel">Enter your name:</label><br />
+    <label id="myLabel">Hit on the Box below for a shot:</label><br />
     <input type="text" id="myText" /><br />
     <button type="button" id="myButton">submit</button>
     <script src="index.js"></script>
